# aiops-aula

boilerplate-aiops-na-pratica/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
boilerplate-aiops-na-pratica/alembic/: env.py
boilerplate-aiops-na-pratica/alembic/versions/: 14ebbe37bebc_add_timezone_to_report_timestamps.py  50da8b7c100b_add_fix_result_to_reports.py  56a2dc4fbac0_create_reports_table.py
boilerplate-aiops-na-pratica/docs/prds/: 001-coleta-eventos-kubernetes.md  002-agente-analise-causa-raiz.md  003-interface-web-notificacao-discord.md  004-agente-correcao-automatica.md
boilerplate-aiops-na-pratica/manifestos-k8s/: kube-news.yaml  nginx.yaml
boilerplate-aiops-na-pratica/openspec/changes/agente-correcao-automatica/: design.md  proposal.md  tasks.md
boilerplate-aiops-na-pratica/openspec/specs/discord-notification/: spec.md
boilerplate-aiops-na-pratica/openspec/specs/event-collection/: spec.md
boilerplate-aiops-na-pratica/openspec/specs/report-web-interface/: spec.md
boilerplate-aiops-na-pratica/src/my_agent_app/: database.py  main.py
boilerplate-aiops-na-pratica/src/my_agent_app/agents/: __init__.py  fix_agent.py  mcp_kubernetes.py  root_cause_agent.py
boilerplate-aiops-na-pratica/src/my_agent_app/api/: router.py
boilerplate-aiops-na-pratica/src/my_agent_app/collector/: __init__.py  event_collector.py  event_handler.py
boilerplate-aiops-na-pratica/src/my_agent_app/models/: __init__.py  report.py
boilerplate-aiops-na-pratica/src/my_agent_app/notifications/: discord.py
(+27 files in other folders)
